fix(arq): open JVM base modules as Wildfly Arquillian dependencies don't themselves