@@ -427,6 +427,7 @@
                                 <arquillian.launch>wildfly-remote</arquillian.launch>
                                 <!-- <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager> -->
                             </systemPropertyVariables>
+                            <argLine>--add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.io=ALL-UNNAMED</argLine>
                         </configuration>
                     </plugin>
                 </plugins>
